section projects has been migrated

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,6 +2,7 @@
 import Welcome from "../components/Welcome.astro";
 import Knowledges from "../components/Knowledges.astro";
 import "../App.css";
+import Projects from "../components/Projects.astro";
 ---
 
 <html lang="en">
@@ -19,5 +20,6 @@ import "../App.css";
   <body>
     <Welcome />
     <Knowledges />
+    <Projects />
   </body>
 </html>
