--- a/src/css/Knowledges.css
+++ b/src/css/Knowledges.css
@@ -14,19 +14,41 @@
 }
 
 .circle {
-	min-height: 20rem;
-	min-width: 20rem;
+	min-height: 26rem;
+	min-width: 26rem;
 	position: absolute;
 	top: 50%;
 	left: 50%;
 	transform: translate(-80%, -30%);
 	border-radius: 50%;
 	background-color: var(--bg-firstCircle);
+	animation: moveCircle 9s linear infinite alternate;
+}
+
+@keyframes moveCircle {
+	to {
+		transform: translate(50vw, -30%);
+	}
+
+	from {
+		transform: translate(-80%, -30%);
+	}
 }
 
 .circle:last-child {
 	transform: translate(-10%, -70%);
 	background-color: var(--bg-secondCircle);
+	animation: moveCircleTwo 9s linear infinite alternate;
+}
+
+@keyframes moveCircleTwo {
+	to {
+		transform: translate(-50vw, -70%);
+	}
+
+	from {
+		transform: translate(-10%, -70%);
+	}
 }
 
 .wrapperSkills {
@@ -40,11 +62,13 @@
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	-webkit-backdrop-filter: blur(124px);
-	-o-backdrop-filter: blur(124px);
-	-moz-backdrop-filter: blur(124px);
-	backdrop-filter: blur(124px);
+	-webkit-backdrop-filter: blur(96px);
+	-o-backdrop-filter: blur(96px);
+	-moz-backdrop-filter: blur(96px);
+	backdrop-filter: blur(96px);
 	z-index: 2;
+	background-image: radial-gradient(#00000010 3%, transparent 0);
+	background-size: 7rem 7rem;
 }
 
 .skills {
