feature: dark mode fixed to the new version and also navigation bars had been added

--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -5,7 +5,7 @@ import "../css/Contact.css";
 <div class="section-contact" id="ss">
   <h1>Contact <span class="textBlue"> me</span>.</h1>
   <div class="wrapper-contact-cards">
-    <div class="card-contact">
+    <div class="cardContact">
       <div class="title-contact-container">
         <h2>Whatsapp</h2>
         <ion-icon class="social-card-svg" name="chatbubbles-outline"></ion-icon>
@@ -13,7 +13,7 @@ import "../css/Contact.css";
       <a target="_blank" href="http://wa.me/+525525448735">Send Message</a>
     </div>
 
-    <div class="card-contact">
+    <div class="cardContact">
       <div class="title-contact-container">
         <h2>Mail</h2>
         <ion-icon class="social-card-svg" name="mail-outline"></ion-icon>
@@ -22,7 +22,7 @@ import "../css/Contact.css";
       <button type="button" class="btnShowMail">Show Mail</button>
     </div>
 
-    <div class="card-contact">
+    <div class="cardContact">
       <div class="title-contact-container">
         <h2>Telegram</h2>
         <ion-icon class="social-card-svg" name="chatbox-outline"></ion-icon>
