--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,54 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
 
+:root {
+	--black12: #121212;
+	--bgCardKnowledges: #fff;
+
+	--border: #D9D9D9;
+	--borderNavBar: #transparent;
+
+	--btnExpand: #f0f0f0;
+	--bg-navbar-desktop: #ffffff33;
+
+	--z-index-navbar: 5;
+
+	--mainColor: #4263eb;
+	--bg: #f2f2f7;
+	--bgWhite: #fff;
+	--bgBlack12: #121212;
+	--bgFirstCircle: #a3b5ff;
+	--bgSecondCircle: pink;
+	--bgCardSkill: #ffffff53;
+
+	--borderCardSkill: #ffffff4b;
+	--borderCardContact: #d9d9d9;
+
+	--frCardSkill: #121212;
+
+	--colorDots: radial-gradient(#00000010 3%, transparent 0);
+
+	--white: white;
+	--frText: #181818;
+}
+
+#rootDarkMode {
+	--mainColor: #B1BFF7;
+	--bg: #101010;
+	--bgWhite: #1c1c1c;
+	--bgBlack12: #f2f2f7;
+	--bgFirstCircle: #24437b;
+	--bgSecondCircle: #2e0e36;
+	--bgCardSkill: #28282853;
+
+	--borderCardSkill: #45454553;
+	--borderCardContact: #4a4a4a;
+
+	--frCardSkill: #fff;
+
+	--frText: #fff;
+	--colorDots: radial-gradient(#ffffff1a 3%, transparent 0);
+}
+
 * {
 	box-sizing: border-box;
 	margin: 0;
@@ -8,32 +57,21 @@
 
 body {
 	font-family: "Inter", sans-serif;
+	background: var(--bg);
 }
 
-:root {
-	--black: #121212;
-	--white: white;
-	--mainColor: #4263eb;
-	/* l: #5c7cfa   d: #364fc7*/
-	--grayBackground: #f2f2f7;
-	--bgCardKnowledges: #fff;
-	/* borders */
-	--border: #D9D9D9;
-	--borderNavBar: #transparent;
-	--borderCardContact: #d9d9d9;
-	/* buttons */
-	--btnExpand: #f0f0f0;
-	/* #1b1b1b */
+html {
+	scroll-behavior: smooth;
+}
 
-	--bg-navbar-desktop: #ffffff33;
-
-	--bg-firstCircle: #a3b5ff;
-	--bg-secondCircle: pink;
-
-	--bg-cardSkill: #ffffff53;
-	--border-cardSkill: #ffffff4b;
-
-	--z-index-navbar: 5;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+	color: var(--frText);
 }
 
 .textBlue {
@@ -42,4 +80,14 @@ body {
 
 .hidden {
 	display: none;
+}
+
+@media (max-width: 720px) {
+	.navBar-desktop {
+		display: none !important;
+	}
+
+	.topBar {
+		display: grid !important;
+	}
 }
