--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,6 +6,8 @@ import Projects from "../components/Projects.astro";
 import Experience from "../components/Experience.astro";
 import Contact from "../components/Contact.astro";
 import Footer from "../components/Footer.astro";
+import Navbar from "../components/Navbar.astro";
+import Topbar from "../components/Topbar.astro";
 ---
 
 <html lang="en">
@@ -34,5 +36,72 @@ import Footer from "../components/Footer.astro";
     <Experience />
     <Contact />
     <Footer />
+    <Navbar />
+    <Topbar />
+
+    <script>
+      let root = document.documentElement;
+      // let root = document.querySelector(":root");
+      const btnMobileDark = document.querySelector(".topBar-btnDark");
+      const btnMobileLight = document.querySelector(".topBar-btnLight");
+
+      const btnDesktopDark = document.querySelector(".navBar-desktop-btnDark");
+      const btnDesktopLight = document.querySelector(
+        ".navBar-desktop-btnLight"
+      );
+
+      export function makeDark() {
+        root.id = "rootDarkMode";
+        /*root.style.setProperty("--white", "#121212");
+        root.style.setProperty("--black12", "white");
+        root.style.setProperty("--bgCardKnowledges", "#131313");
+        root.style.setProperty("--mainColor", "#B1BFF7");
+        root.style.setProperty("--borderNavBar", "#353535");
+        root.style.setProperty("--borderCardContact", "#353535");
+        root.style.setProperty("--btnExpand", "#1b1b1b");
+        root.style.setProperty("--bg-navbar-desktop", "#33333333");
+
+        root.style.setProperty("--bg-firstCircle", "#24437b");
+        root.style.setProperty("--bg-secondCircle", "#2e0e36");
+
+        root.style.setProperty("--bg-cardSkill", "#12121253");
+        root.style.setProperty("--border-cardSkill", "#5c5b5b4b");*/
+
+        btnMobileDark.classList.add("hidden");
+        btnMobileLight.classList.remove("hidden");
+
+        btnDesktopDark.classList.add("hidden");
+        btnDesktopLight.classList.remove("hidden");
+      }
+
+      export function makeLight() {
+        root.removeAttribute("id");
+        /*root.style.setProperty("--white", "white");
+        root.style.setProperty("--black12", "#121212");
+        root.style.setProperty("--mainColor", "#4263eb");
+        root.style.setProperty("--borderNavBar", "transparent");
+        root.style.setProperty("--borderCardContact", "#d9d9d9");
+        root.style.setProperty("--btnExpand", "#f0f0f0");
+        root.style.setProperty("--bg-navbar-desktop", "#ffffff33");
+
+        root.style.setProperty("--bg-firstCircle", "#a3b5ff");
+        root.style.setProperty("--bg-secondCircle", "pink");
+
+        root.style.setProperty("--bg-cardSkill", "#ffffff53");
+        root.style.setProperty("--border-cardSkill", "#ffffff4b");*/
+
+        btnMobileLight.classList.add("hidden");
+        btnMobileDark.classList.remove("hidden");
+
+        btnDesktopLight.classList.add("hidden");
+        btnDesktopDark.classList.remove("hidden");
+      }
+
+      btnMobileDark.addEventListener("click", makeDark);
+      btnMobileLight.addEventListener("click", makeLight);
+
+      btnDesktopDark.addEventListener("click", makeDark);
+      btnDesktopLight.addEventListener("click", makeLight);
+    </script>
   </body>
 </html>
