--- a/src/css/Experience.css
+++ b/src/css/Experience.css
@@ -1,27 +1,55 @@
 .section-education {
-	width: 100%;
 	margin-top: 11rem;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
+	display: grid;
+	place-items: center;
+	gap: 4rem 0;
 }
 
 .section-education h1 {
-	width: 85%;
-	margin-top: 1.5rem;
 	letter-spacing: -1px;
 	font-size: 3.1rem;
 	line-height: 1.1;
-	text-align: center;
 }
 
-.wrapper-section-education {
-	height: 11rem;
+.wrapperExperience {
+	height: fit-content;
 	width: 80%;
-	margin-top: 1.5rem;
 	display: grid;
-	gap: 2rem 1rem;
-	grid-template-columns: repeat(auto-fit, minmax(12rem, 1fr));
+	grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
 	align-items: center;
 	justify-items: center;
+}
+
+.cardExperience {
+	width: 22rem;
+	height: 11rem;
+	padding: 1.6rem 1rem;
+	border-radius: .85rem;
+	box-shadow: 0 2px 4px 0px #00000029;
+	position: relative;
+	display: grid;
+	align-items: center;
+	gap: .3rem;
+	background: var(--bgCardExperience);
+}
+
+.cardExperience svg {
+	position: absolute;
+	top: 1rem;
+	right: 1rem;
+	height: 48px;
+	width: 48px;
+	padding: 11px;
+	border-radius: 7rem;
+	stroke: var(--strokeIconCardExperience);
+	background-color: var(--bgIconCardExperience);
+}
+
+
+.cardExperience p {
+	color: var(--frCardExperience);
+}
+
+.textEmphasis {
+	color: var(--frEmphasisGreen);
 }
