--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -7,7 +7,7 @@ import "../css/Projects.css";
     <h1 class="projects-h1">My personal projects</h1>
     <article class="cardKnowledges">
       <div class="cardKnowledgesBorder"></div>
-      <div class="cardKnowledgesBg"></div>
+      <!-- <div class="cardKnowledgesBg"></div> -->
 
       <article class="projectMain">
         <img src="/fare-logo.svg" alt="Fare web site logo" width="64" />
@@ -48,7 +48,7 @@ import "../css/Projects.css";
   <h2 class="projects-h2">
     The <span class="textBlue-onBlack">big ones</span>.
   </h2>
-  <p>Interfaces built with React and CSS</p>
+  <p>UI's built with React and vanilla CSS</p>
 
   <section class="wrapperSlider">
     <aside class="sideLeftBlur"></aside>
@@ -100,7 +100,7 @@ import "../css/Projects.css";
     <aside class="sideRightBlur"></aside>
   </section>
 
-  <p>Interfaces built in Java with Swing and AWT libraries</p>
+  <p>UI's built in Java with Swing and AWT</p>
 
   <section class="wrapperSlider">
     <aside class="sideLeftBlur"></aside>
