--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -1,34 +1,26 @@
 ---
 import "../css/Experience.css";
+import { experience } from "../constants/experience";
 ---
 
-<section class="section-education">
-  <h1>Education and <span class="textBlue">experience</span>.</h1>
+<section class="sectionExperience">
+  <h1>Education <span class="textBlue"> & </span>Experience.</h1>
+  <p class="sectionExperienceDescription">
+    Where study and experience are enhanced. The places where the mind is formed
+  </p>
   <main class="wrapperExperience">
-    <article class="cardExperience">
-      <div class="cardKnowledgesBorder"></div>
-
-      <svg
-        height="32"
-        fill="none"
-        viewBox="0 0 24 24"
-        stroke-width="1.5"
-        stroke="currentColor"
-      >
-        <path
-          stroke-linecap="round"
-          stroke-linejoin="round"
-          d="M4.26 10.147a60.438 60.438 0 0 0-.491 6.347A48.62 48.62 0 0 1 12 20.904a48.62 48.62 0 0 1 8.232-4.41 60.46 60.46 0 0 0-.491-6.347m-15.482 0a50.636 50.636 0 0 0-2.658-.813A59.906 59.906 0 0 1 12 3.493a59.903 59.903 0 0 1 10.399 5.84c-.896.248-1.783.52-2.658.814m-15.482 0A50.717 50.717 0 0 1 12 13.489a50.702 50.702 0 0 1 7.74-3.342M6.75 15a.75.75 0 1 0 0-1.5.75.75 0 0 0 0 1.5Zm0 0v-3.675A55.378 55.378 0 0 1 12 8.443m-7.007 11.55A5.981 5.981 0 0 0 6.75 15.75v-1.5"
-        ></path>
-      </svg>
-      <p><strong>University</strong></p>
-      <h3>Tecnológico de Coacalco</h3>
-      <p>
-        Final score
-        <span class="textEmphasis">9.6</span> and <span class="textEmphasis"
-          >260</span
-        > credits
-      </p>
-    </article>
+    {
+      experience.map((item) => (
+        <article class="cardExperience">
+          <header class="cardExperienceFancyBorderTop" />
+          <Fragment set:html={item.icon} />
+          <p>
+            <strong>{item.title}</strong>
+          </p>
+          <h3>{item.description}</h3>
+          <p set:html={item.footer} />
+        </article>
+      ))
+    }
   </main>
 </section>
