--- a/src/css/Experience.css
+++ b/src/css/Experience.css
@@ -1,29 +1,44 @@
-.section-education {
+.sectionExperience {
 	margin-top: 11rem;
 	display: grid;
 	place-items: center;
-	gap: 4rem 0;
+	gap: 1rem 0;
+	padding-inline: 1rem;
 }
 
-.section-education h1 {
+.sectionExperience h1 {
 	letter-spacing: -1px;
 	font-size: 3.1rem;
 	line-height: 1.1;
+	text-align: center;
+}
+
+.sectionExperienceDescription {
+	line-height: 1.7;
+	text-align: center;
 }
 
 .wrapperExperience {
 	height: fit-content;
 	width: 80%;
+	margin-top: 2rem;
 	display: grid;
+	gap: 3rem 1rem;
 	grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
 	align-items: center;
 	justify-items: center;
 }
 
+@media (max-width: 720px) {
+	.wrapperExperience {
+		width: 100%;
+	}
+}
+
 .cardExperience {
 	width: 22rem;
 	height: 11rem;
-	padding: 1.6rem 1rem;
+	padding: 1rem;
 	border-radius: .85rem;
 	box-shadow: 0 2px 4px 0px #00000029;
 	position: relative;
@@ -33,18 +48,46 @@
 	background: var(--bgCardExperience);
 }
 
-.cardExperience svg {
+.cardExperienceFancyBorderTop {
+	left: 1/2;
+	top: 0;
+	width: 70%;
+	height: 1px;
+	user-select: none;
+	pointer-events: none;
+	position: absolute;
+	translate: (1/2, 1/2);
+	justify-self: center;
+	background: linear-gradient(90deg, rgba(0, 0, 0, 0) 0%, rgba(255, 255, 255, 0.0) 0%, rgba(198, 198, 198, 0.67) 50%, rgba(0, 0, 0, 0) 100%);
+}
+
+.cardExperienceIconSchool,
+.cardExperienceIconBook,
+.cardExperienceIconBag {
 	position: absolute;
 	top: 1rem;
 	right: 1rem;
-	height: 48px;
-	width: 48px;
-	padding: 11px;
+	height: 50px;
+	width: 50px;
+	padding: 10px;
 	border-radius: 7rem;
 	stroke: var(--strokeIconCardExperience);
 	background-color: var(--bgIconCardExperience);
 }
 
+.cardExperienceIconBook {
+	stroke: var(--strokeIconCardExperienceBook);
+	background-color: var(--bgCardExperienceBook);
+}
+
+.cardExperienceIconBag {
+	stroke: var(--strokeIconCardExperienceBag);
+	background: var(--bgCardExperienceBag);
+}
+
+.cardExperience h3 {
+	font-size: 1.3rem;
+}
 
 .cardExperience p {
 	color: var(--frCardExperience);
