--- a/src/css/Knowledges.css
+++ b/src/css/Knowledges.css
@@ -22,6 +22,9 @@
 	transform: translate(-80%, -30%);
 	border-radius: 50%;
 	background-color: var(--bgFirstCircle);
+	-moz-animation: moveCircle 9s linear infinite alternate;
+	-o-animation: moveCircle 9s linear infinite alternate;
+	-webkit-animation: moveCircle 9s linear infinite alternate;
 	animation: moveCircle 9s linear infinite alternate;
 }
 
