fixes: some label and styles issues

--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -6,7 +6,8 @@ import { experience } from "../constants/experience";
 <section class="sectionExperience">
   <h1>Education <span class="textBlue"> & </span>Experience.</h1>
   <p class="sectionExperienceDescription">
-    Where study and experience are enhanced. The places where the mind is formed
+    Where study and experience are enhanced. The places where the mind is
+    formed.
   </p>
   <main class="wrapperExperience">
     {
