--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -16,7 +16,7 @@ import "../css/Navbar.css";
     <button
       type="button"
       title="Button turn the dark mode"
-      class="navBar-desktop-btnDark"
+      class="navBarBtnDark"
     >
       <ion-icon class="navbar-desktop-ion" name="bed-outline"></ion-icon>
     </button>
@@ -24,7 +24,7 @@ import "../css/Navbar.css";
     <button
       type="button"
       title="Button turn the light mode"
-      class="navBar-desktop-btnLight hidden"
+      class="navBarBtnSun hidden"
     >
       <ion-icon class="navbar-desktop-ion" name="sunny-outline"></ion-icon>
     </button>
