--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -20,7 +20,7 @@ import "../css/Projects.css";
             >Discover Fare</a
           >
           <a target="_blank" href="https://github.com/ValenciaArcega/fare"
-            >Star in Github</a
+            >Give a star in Github</a
           >
         </footer>
       </article>
@@ -37,7 +37,7 @@ import "../css/Projects.css";
             >Discover Tolescro</a
           >
           <a target="_blank" href="https://github.com/ValenciaArcega/tolescro"
-            >Star in Github</a
+            >Give a star in Github</a
           >
         </footer>
       </article>
