--- a/src/css/Contact.css
+++ b/src/css/Contact.css
@@ -71,7 +71,7 @@
 	border: none;
 	text-decoration: none;
 	text-align: center;
-	color: var(--white);
+	color: var(--frWhite);
 	background-color: var(--mainColor);
 	box-shadow: 0px 5px 15px rgba(67, 117, 197, 0.172);
 	transition: transform .7s;
