--- a/src/css/Navbar.css
+++ b/src/css/Navbar.css
@@ -9,8 +9,9 @@
 	display: grid;
 	grid-template-columns: 10% 80%;
 	-webkit-backdrop-filter: blur(6px);
+	-moz-backdrop-filter: blur(6px);
+	-o-backdrop-filter: blur(6px);
 	backdrop-filter: blur(6px);
-	background-color: var(--bg-navbar-desktop);
 	z-index: var(--z-index-navbar);
 }
 
@@ -29,18 +30,18 @@
 
 .navBar-desktop-options>a {
 	font-weight: 500;
-	color: var(--black12) !important;
+	color: gray !important;
 }
 
 .navbar-desktop-ion {
 	font-size: 24px;
-	color: var(--black12);
+	color: gray;
 	/* color: #f6ed2f; */
 	--ionicon-stroke-width: 36px;
 }
 
-.navBar-desktop-btnLight,
-.navBar-desktop-btnDark {
+.navBarBtnSun,
+.navBarBtnDark {
 	border: none;
 	background: none;
 }
