--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -10,7 +10,7 @@ import "../css/Projects.css";
       <!-- <div class="cardKnowledgesBg"></div> -->
 
       <article class="projectMain">
-        <img src="/fare-logo.svg" alt="Fare web site logo" width="64" />
+        <img src="./fare-logo.svg" alt="Fare web site logo" width="64" />
         <p>
           <span>Fare</span> it is a website to save your ideas. Easy, clean and fast.
         </p>
@@ -26,7 +26,11 @@ import "../css/Projects.css";
       </article>
 
       <article class="projectMain">
-        <img src="/tolescro-logo.svg" alt="Tolescro web site logo" width="64" />
+        <img
+          src="./tolescro-logo.svg"
+          alt="Tolescro web site logo"
+          width="64"
+        />
         <p>
           <span>Tolescro</span> it is a website to scroll and learn English with
           cards.
@@ -54,47 +58,47 @@ import "../css/Projects.css";
     <aside class="sideLeftBlur"></aside>
     <img
       class="projectInSliderRight"
-      src="/interfaces-web/portfolio-UI-cloudServices.webp"
+      src="./interfaces-web/portfolio-UI-cloudServices.webp"
       alt="UI Cloud services app"
     />
     <img
       class="projectInSliderRight"
-      src="/interfaces-web/portfolio-UI-social.webp"
+      src="./interfaces-web/portfolio-UI-social.webp"
       alt="UI Social media app"
     />
     <img
       class="projectInSliderRight"
-      src="/interfaces-web/portfolio-UI-dating.webp"
+      src="./interfaces-web/portfolio-UI-dating.webp"
       alt="UI Dating app"
     />
     <img
       class="projectInSliderRight"
-      src="/interfaces-web/portfolio-UI-bank.webp"
+      src="./interfaces-web/portfolio-UI-bank.webp"
       alt="UI Bank app"
     />
     <img
       class="projectInSliderRight"
-      src="/interfaces-web/portfolio-UI-gadgets.webp"
+      src="./interfaces-web/portfolio-UI-gadgets.webp"
       alt="UI Gadgets shop app"
     />
     <img
       class="projectInSliderRight"
-      src="/interfaces-web/portfolio-UI-mechanic.webp"
+      src="./interfaces-web/portfolio-UI-mechanic.webp"
       alt="UI Mechanic tools shop app"
     />
     <img
       class="projectInSliderRight"
-      src="/interfaces-web/portfolio-UI-login01.webp"
+      src="./interfaces-web/portfolio-UI-login01.webp"
       alt="UI Login"
     />
     <img
       class="projectInSliderRight"
-      src="/interfaces-web/portfolio-UI-login02.webp"
+      src="./interfaces-web/portfolio-UI-login02.webp"
       alt="UI Register form"
     />
     <img
       class="projectInSliderRight"
-      src="/interfaces-web/portfolio-UI-login03.webp"
+      src="./interfaces-web/portfolio-UI-login03.webp"
       alt="UI Register form"
     />
     <aside class="sideRightBlur"></aside>
@@ -106,32 +110,32 @@ import "../css/Projects.css";
     <aside class="sideLeftBlur"></aside>
     <img
       class="projectInSliderLeft"
-      src="/interfaces-java/UI_space.webp"
+      src="./interfaces-java/UI_space.webp"
       alt="UI Space explorer in Java"
     />
     <img
       class="projectInSliderLeft"
-      src="/interfaces-java/UI_dentist.webp"
+      src="./interfaces-java/UI_dentist.webp"
       alt="UI Dentist booking in Java"
     />
     <img
       class="projectInSliderLeft"
-      src="/interfaces-java/UI_weather.webp"
+      src="./interfaces-java/UI_weather.webp"
       alt="UI Weather in Java"
     />
     <img
       class="projectInSliderLeft"
-      src="/interfaces-java/UI_games.webp"
+      src="./interfaces-java/UI_games.webp"
       alt="UI Games store in Java"
     />
     <img
       class="projectInSliderLeft"
-      src="/interfaces-java/UI_weather_home.webp"
+      src="./interfaces-java/UI_weather_home.webp"
       alt="UI Weather in Java"
     />
     <img
       class="projectInSliderLeft"
-      src="/interfaces-java/UI_airport.webp"
+      src="./interfaces-java/UI_airport.webp"
       alt="UI Airport ticket in Java"
     />
     <aside class="sideRightBlur"></aside>
