--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,7 +13,7 @@ import Topbar from "../components/Topbar.astro";
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.png" />
+    <link rel="icon" type="image/svg+xml" href="./favicon.png" />
     <meta
       name="description"
       content="This is my portfolio, that can help people that is interested in to know who I am, where I studied, also some of my skills and projects that I had developed."
