fixes: image sourcing and some label redaction

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -9,16 +9,16 @@ import "../css/Footer.css";
       target="_blank"
       href="https://www.linkedin.com/in/angel-valencia-arcega-4827b9239"
     >
-      <img src="/footer/icon_footer_linkedin.svg" alt="linkedin logo" />
+      <img src="./footer/icon_footer_linkedin.svg" alt="linkedin logo" />
     </a>
     <a target="_blank" href="https://github.com/ValenciaArcega">
-      <img src="/footer/icon_footer_github.svg" alt="gtihub logo" />
+      <img src="./footer/icon_footer_github.svg" alt="gtihub logo" />
     </a>
     <a target="_blank" href="https://www.instagram.com/valencia.arcega/">
-      <img src="/footer/icon_footer_instagram.svg" alt="instagram logo" />
+      <img src="./footer/icon_footer_instagram.svg" alt="instagram logo" />
     </a>
     <a target="_blank" href="https://www.facebook.com/valencia.arcega">
-      <img src="/footer/icon_footer_facebook.svg" alt="facebook logo" />
+      <img src="./footer/icon_footer_facebook.svg" alt="facebook logo" />
     </a>
   </div>
   <p>2024, Valencia Arcega</p>
