--- a/src/components/Welcome.astro
+++ b/src/components/Welcome.astro
@@ -43,9 +43,11 @@ import "../css/Welcome.css";
         I<span class="textBlue">'</span>m <span class="textBlue">Angel</span>.
       </h1>
       <p class="welcome-text-p">
-        <span class="animated-text"> Software engineer</span> & web designer, that
-        loves to learn and build gorgeous <span class="textBlue">software</span>
-        experiences.
+        <span class="animated-text"> Software engineer</span> & Frontend developer,
+        that loves to learn and build gorgeous <span class="textBlue"
+          >software</span
+        >
+        experiences<span class="textBlue">.</span>
       </p>
     </div>
   </article>
