Contact section has gone

--- a/src/components/Welcome.astro
+++ b/src/components/Welcome.astro
@@ -43,7 +43,7 @@ import "../css/Welcome.css";
         I<span class="textBlue">'</span>m <span class="textBlue">Angel</span>.
       </h1>
       <p class="welcome-text-p">
-        <span class="animated-text"> Software engineer</span> & Frontend developer,
+        <span class="animated-text"> Software engineer</span> & frontend developer,
         that loves to learn and build gorgeous <span class="textBlue"
           >software</span
         >
