--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,7 +4,7 @@ import Knowledges from "../components/Knowledges.astro";
 import "../App.css";
 import Projects from "../components/Projects.astro";
 import Experience from "../components/Experience.astro";
-import Contact from "../components/Contact.astro";
+// import Contact from "../components/Contact.astro";
 import Footer from "../components/Footer.astro";
 import Navbar from "../components/Navbar.astro";
 import Topbar from "../components/Topbar.astro";
@@ -34,7 +34,7 @@ import Topbar from "../components/Topbar.astro";
     <Knowledges />
     <Projects />
     <Experience />
-    <Contact />
+    <!-- <Contact /> -->
     <Footer />
     <Navbar />
     <Topbar />
