fixes: changes on section direction, some gap on experience cards and some label emphasis

--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -3,7 +3,7 @@ import "../css/Experience.css";
 import { experience } from "../constants/experience";
 ---
 
-<section class="sectionExperience">
+<section class="sectionExperience" id="ss">
   <h1>Education <span class="textBlue"> & </span>Experience.</h1>
   <p class="sectionExperienceDescription">
     Where study and experience are enhanced. The places where the mind is
