--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -11,14 +11,14 @@ import "../css/Navbar.css";
 
     <a class="topBar-anker" href="#sp">Projects</a>
 
-    <a class="topBar-anker" href="#ss">Contact</a>
+    <a class="topBar-anker" href="#ss">Experience</a>
 
     <button
       type="button"
       title="Button turn the dark mode"
       class="navBarBtnDark"
     >
-      <ion-icon class="navbar-desktop-ion" name="bed-outline"></ion-icon>
+      <ion-icon class="navbar-desktop-ion" name="moon-outline"></ion-icon>
     </button>
 
     <button
