--- a/src/components/Topbar.astro
+++ b/src/components/Topbar.astro
@@ -32,7 +32,7 @@ import "../css/Topbar.css";
   </a>
 
   <a class="topBar-anker" href="#ss">
-    <ion-icon class="topBar-btnSVG" name="chatbubble-outline"></ion-icon>
-    <p class="topBar-anker-p">Contact</p>
+    <ion-icon class="topBar-btnSVG" name="color-filter-outline"></ion-icon>
+    <p class="topBar-anker-p">Experience</p>
   </a>
 </nav>
