--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -2,7 +2,7 @@
 import "../css/Contact.css";
 ---
 
-<div class="section-contact" id="ss">
+<div class="section-contact" id="contact">
   <h1>Contact <span class="textBlue"> me</span>.</h1>
   <div class="wrapper-contact-cards">
     <div class="cardContact">
