--- a/src/components/Topbar.astro
+++ b/src/components/Topbar.astro
@@ -8,7 +8,7 @@ import "../css/Topbar.css";
     title="Button turn the dark mode"
     class="topBar-btnDark"
   >
-    <ion-icon class="topBar-btnSVG" name="bed-outline"></ion-icon>
+    <ion-icon class="topBar-btnSVG" name="moon-outline"></ion-icon>
     <p class="topBar-btn-p">Night</p>
   </button>
 
