--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,6 +13,8 @@ import Topbar from "../components/Topbar.astro";
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <meta name="google" content="notranslate" />
+    <meta http-equiv="Content-Language" content="en_US" />
     <link rel="icon" type="image/svg+xml" href="./favicon.png" />
     <meta
       name="description"
