--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -3,7 +3,7 @@ import "../css/Navbar.css";
 ---
 
 <nav class="navBar-desktop">
-  <img src="./favicon.png" alt="navigation bar icon" />
+  <img src="./favicon.webp" alt="navigation bar icon" />
 
   <section class="navBar-desktop-options">
     <!-- <a class="topBar-anker"
