--- a/src/components/Welcome.astro
+++ b/src/components/Welcome.astro
@@ -4,7 +4,7 @@ import "../css/Welcome.css";
 
 <script>
   window.addEventListener("DOMContentLoaded", function () {
-    const img = document.querySelector(".welcome-img");
+    const img: HTMLImageElement = document.querySelector(".welcome-img");
     const height = img.clientHeight;
     const width = img.clientWidth;
 
