--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,7 +15,7 @@ import Topbar from "../components/Topbar.astro";
     <meta charset="utf-8" />
     <meta name="google" content="notranslate" />
     <meta http-equiv="Content-Language" content="en_US" />
-    <link rel="icon" type="image/svg+xml" href="./favicon.png" />
+    <link rel="icon" type="image/svg+xml" href="./favicon.webp" />
     <meta
       name="description"
       content="This is my portfolio, that can help people that is interested in to know who I am, where I studied, also some of my skills and projects that I had developed."
