--- a/src/css/Topbar.css
+++ b/src/css/Topbar.css
@@ -27,6 +27,11 @@
 	text-decoration: none;
 }
 
+.topBar-anker:hover {
+	cursor: pointer;
+	text-decoration: underline;
+}
+
 .topBar-btnSVG {
 	font-size: 24px;
 	color: gray !important;
